--- a/css/style.css
+++ b/css/style.css
@@ -2167,22 +2167,6 @@ body.dark .blog-page-section .blog-single {
   position: relative;
 }
 
-.overlay-button {
-  position: absolute;
-  bottom: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #ff0000;
-  color: #fff;
-  font-family: "Rubik", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  border-radius: 30px;
-  line-height: 1;
-  cursor: pointer;
-  padding: 12px 32px;
-}
-
 .btn:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -2677,23 +2661,11 @@ body.dark .blog-page-section .blog-single {
 }
 
 .videoWrapper iframe {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
-
-.video-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.video-container iframe {
-  width: 100%;
-  height: 100%;
-  margin-bottom: 100px;
   opacity: 0.1;
   z-index: 0;
 }
@@ -3215,11 +3187,12 @@ only screen and (min-device-pixel-ratio: 1.5) {
 }
 
 .icon-container {
-  position: absolute;
-  top: 50%;
+  position: relative;
+  top: 0%;
   left: 50%;
-  transform: translate(-50%, -50%);
   width: 100%;
+  padding-bottom: 50px;
+  z-index: -1;
 }
 
 .icon-slider {
@@ -3227,8 +3200,8 @@ only screen and (min-device-pixel-ratio: 1.5) {
 }
 
 .icon-button img {
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   margin-right: 50px;
   border-radius: 40px;
 }
