--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,10 @@ html {
 }
 
 body {
-  color: #5E5C7F;
-  background-color: #F9F9FF;
+  color: #FFF;
+  background-color: #FFF;
   font-family: "Rubik", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.7;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
@@ -462,7 +462,7 @@ pre {
 }
 
 #preloader.light {
-  background: #F9F9FF;
+  background: #FFF;
 }
 
 .goo-outer {
@@ -608,7 +608,7 @@ header.desktop-header-1 .copyright {
 }
 
 header.desktop-header-1.light {
-  background: #F9F9FF;
+  background: #FFF;
   border-right: solid 1px rgba(0, 0, 0, 0.05);
 }
 
@@ -1015,13 +1015,11 @@ section.home {
 
 section.contact {
   padding-top: 5vh;
-  background: #FFF;
-  height: 55vh;
-  min-height: 55vh;
+  background: #494673;
 }
 
 section.privacy {
-  background: #FFF;
+  background: #494673;
   padding-bottom: 10vh;
 }
 
@@ -1034,12 +1032,12 @@ section.home .intro {
 }
 
 section.home .intro h1 {
-  color: #FFF;
+  color: #353353;
   font-size: 36px;
 }
 
 section.home .intro span {
-  color: #FFF;
+  color: #353353;
   font-size: 16px;
 }
 
@@ -1047,31 +1045,19 @@ section.home .social-icons li a {
   color: #FFF;
 }
 
-section.home.light {
-  background: #F9F9FF;
-}
-
-section.home.light .intro h1 {
-  color: #353353;
-}
-
-section.home.light .intro span {
-  color: #454360;
-}
-
-section.home.light .social-icons li a {
-  color: #353353;
-}
-
-section.home.light .social-icons li a:hover {
-  color: #FFD15C;
-}
-
 .section-title {
   font-size: 36px;
   margin: 0;
   margin-left: 14px;
   position: relative;
+  color: white;
+}
+
+.section-text {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  color: white;
+  align-items: center;
 }
 
 .section-title:before {
@@ -1153,752 +1139,6 @@ section.home.light .social-icons li a:hover {
 .parallax .p11 {
   bottom: 10%;
   right: 10%;
-}
-
-/*=================================================================*/
-/*                      SKILLS                              
-/*=================================================================*/
-.skill-item .skill-info h4 {
-  font-size: 16px;
-  font-weight: 500;
-}
-
-.skill-item .skill-info span {
-  font-size: 14px;
-}
-
-/*=================================================================*/
-/*                      SERVICE                              
-/*=================================================================*/
-.service-box {
-  -webkit-transform: translateY(0);
-  -ms-transform: translateY(0);
-  transform: translateY(0);
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.service-box h3 {
-  font-size: 20px;
-}
-
-.service-box img {
-  margin-bottom: 22px;
-}
-
-.service-box:hover {
-  -webkit-transform: translateY(-10px);
-  -ms-transform: translateY(-10px);
-  transform: translateY(-10px);
-}
-
-/*=================================================================*/
-/*                      PORTFOLIO                              
-/*=================================================================*/
-.portfolio-wrapper [class*=col-] {
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
-.pf-filter-wrapper {
-  display: none;
-}
-
-.portfolio-item {
-  position: relative;
-  overflow: hidden;
-}
-
-.portfolio-item .thumb {
-  overflow: hidden;
-}
-
-.portfolio-item .details {
-  color: #FFF;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  z-index: 1;
-}
-
-.portfolio-item .details h4 {
-  color: #FFF;
-  font-size: 20px;
-  margin: 0 0 10px;
-  padding: 0 20px;
-  opacity: 0;
-  -webkit-transform: translateY(30px);
-  -ms-transform: translateY(30px);
-  transform: translateY(30px);
-  -webkit-transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-  -o-transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-  position: absolute;
-  top: 60px;
-}
-
-.portfolio-item .details span.term {
-  color: #FFF;
-  background: #FF4C60;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  font-size: 14px;
-  opacity: 0;
-  display: inline-block;
-  padding: 3px 10px;
-  position: absolute;
-  top: 0;
-  left: 20px;
-  -webkit-transform: translateY(-40px);
-  -ms-transform: translateY(-40px);
-  transform: translateY(-40px);
-  -webkit-transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-  -o-transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-}
-
-.portfolio-item .details .more-button {
-  color: #FFF;
-  font-size: 20px;
-  display: block;
-  background: #FFD15C;
-  border-radius: 100%;
-  height: 40px;
-  line-height: 42px;
-  text-align: center;
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  width: 40px;
-  opacity: 0;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.portfolio-item .mask {
-  background: #6C6CE5;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  height: 100%;
-  width: 100%;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.portfolio-item:hover .mask {
-  opacity: 0.6;
-}
-
-.portfolio-item:hover .details h4,
-.portfolio-item:hover .details span {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-  -ms-transform: translateY(0);
-  transform: translateY(0);
-}
-
-.portfolio-item:hover .details .more-button {
-  opacity: 1;
-}
-
-.portfolio-filter {
-  margin-bottom: 25px;
-}
-
-.portfolio-filter li {
-  color: #5E5C7F;
-  cursor: pointer;
-  font-family: "Rubik", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  position: relative;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.portfolio-filter li:hover {
-  color: #FF4C60;
-}
-
-.portfolio-filter li.current {
-  color: #FF4C60;
-}
-
-.portfolio-filter li:not(:last-child) {
-  margin-right: 1.8rem;
-}
-
-select.portfolio-filter-mobile {
-  font-size: 16px;
-  border-radius: 10px;
-  outline: 0;
-  margin-bottom: 30px;
-  position: relative;
-  width: 100%;
-}
-
-.pf-filter-wrapper {
-  position: relative;
-}
-
-.pf-filter-wrapper:after {
-  content: "";
-  font-family: "FontAwesome";
-  position: absolute;
-  top: 0;
-  right: 20px;
-  color: #000;
-}
-
-/*=================================================================*/
-/*                      FACTS                              
-/*=================================================================*/
-.fact-item .details {
-  margin-left: 60px;
-}
-
-.fact-item .icon {
-  font-size: 36px;
-  color: #DEDEEA;
-  float: left;
-}
-
-.fact-item .number {
-  font-size: 30px;
-}
-
-.fact-item .number em {
-  font-style: normal;
-}
-
-.fact-item p {
-  font-size: 16px;
-}
-
-/*=================================================================*/
-/*                      PRICES                              
-/*=================================================================*/
-.price-item {
-  padding: 30px 40px;
-}
-
-.price-item h2.plan {
-  font-size: 24px;
-}
-
-.price-item .price {
-  font-size: 36px;
-  font-weight: 700;
-  margin: 0;
-}
-
-.price-item .price em {
-  font-style: normal;
-  font-size: 14px;
-  vertical-align: super;
-  margin-right: 5px;
-}
-
-.price-item .price span {
-  font-size: 16px;
-  font-weight: 400;
-  margin-left: 10px;
-}
-
-.price-item ul {
-  margin-bottom: 0;
-}
-
-.price-item ul li {
-  line-height: 2.1;
-}
-
-.price-item .btn {
-  margin-top: 20px;
-}
-
-.price-item.best {
-  padding: 55px 40px;
-  z-index: 1;
-  position: relative;
-}
-
-.price-item .badge {
-  color: #FFF;
-  background: #6C6CE5;
-  -webkit-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  position: absolute;
-  left: 0;
-  top: 46px;
-  padding: 7px 12px;
-  font-size: 14px;
-  font-weight: 400;
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
-
-/*=================================================================*/
-/*                      TESTIMONIALS                              
-/*=================================================================*/
-.testimonials-wrapper {
-  max-width: 700px;
-  margin: auto;
-}
-
-.testimonial-item {
-  padding: 0 20px 20px;
-}
-
-.testimonial-item .thumb {
-  border-radius: 50%;
-  overflow: hidden;
-  height: 90px;
-  width: 90px;
-}
-
-.testimonial-item .subtitle {
-  color: #8B88B1;
-  font-size: 14px;
-}
-
-.testimonial-item p {
-  font-size: 16px;
-}
-
-/*=================================================================*/
-/*                      BLOG                              
-/*=================================================================*/
-.blog-item {
-  overflow: hidden;
-  -webkit-transform: translateY(0);
-  -ms-transform: translateY(0);
-  transform: translateY(0);
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.blog-item:hover {
-  -webkit-transform: translateY(0);
-  -ms-transform: translateY(0);
-  transform: translateY(-10px);
-}
-
-.blog-item .thumb {
-  position: relative;
-  overflow: hidden;
-}
-
-.blog-item .thumb img {
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.blog-item .thumb:hover img {
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
-.blog-item .category {
-  background: #FF4C60;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  color: #FFF;
-  font-size: 14px;
-  padding: 2px 8px;
-  position: absolute;
-  left: 20px;
-  top: 0;
-  z-index: 1;
-}
-
-.blog-item .details {
-  padding: 20px;
-}
-
-.blog-item .details h4.title {
-  font-size: 20px;
-}
-
-.blog-item .details h4.title a {
-  color: #353353;
-}
-
-.blog-item .details h4.title a:hover {
-  color: #FF4C60;
-}
-
-.blog-item .meta {
-  font-size: 14px;
-  color: #8B88B1;
-}
-
-.blog-item .meta li:not(:last-child) {
-  margin-right: 0.6rem;
-}
-
-.blog-item .meta li:after {
-  content: "";
-  background: #8B88B1;
-  border-radius: 50%;
-  display: inline-block;
-  height: 3px;
-  margin-left: 0.6rem;
-  vertical-align: middle;
-  width: 3px;
-}
-
-.blog-item .meta li:last-child::after {
-  display: none;
-}
-
-.blog-page-section {
-  background-color: #f9f9ff;
-  padding-bottom: 70px;
-}
-
-.blog-page-section .blog-img-text {
-  padding: 30px;
-  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
-  box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
-}
-
-.blog-page-section .blog-text-title h4 {
-  font-size: 30px;
-}
-
-.blog-page-section .blog-text-title h4 a {
-  color: #454360;
-}
-
-.blog-page-section .blog-text-title h4 a:hover {
-  color: #FF4C60;
-}
-
-.blog-page-section .blog-pagination {
-  margin: 60px 0px 40px;
-}
-
-.blog-page-section .blog-pagination ul li {
-  height: 50px;
-  width: 50px;
-  line-height: 50px;
-  margin: 0px 10px;
-  border-radius: 100%;
-  display: inline-block;
-  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
-  box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
-}
-
-.blog-page-section .blog-pagination ul li a {
-  width: 100%;
-  display: block;
-  font-weight: 500;
-  border-radius: 100%;
-}
-
-.blog-page-section .blog-pagination ul li a:hover {
-  background-color: #FF4C60;
-}
-
-.blog-page-section .blog-standard {
-  margin-bottom: 30px;
-}
-
-.blog-page-section .blog-standard .meta {
-  font-size: 14px;
-  color: #8b88b1;
-}
-
-.blog-page-section .blog-standard .meta li:after {
-  content: "";
-  background: #8b88b1;
-  border-radius: 50%;
-  display: inline-block;
-  height: 3px;
-  margin-left: 0.6rem;
-  vertical-align: middle;
-  width: 3px;
-}
-
-.blog-page-section .blog-standard .meta li:last-child:after {
-  display: none;
-}
-
-.blog-page-section .blog-standard .meta li:not(:last-child) {
-  margin-right: 0.6rem;
-}
-
-.blog-page-section .blog-standard .meta li a {
-  color: #353353;
-}
-
-.blog-page-section .blog-standard .meta li a:hover {
-  color: #ff4c60;
-}
-
-.blog-page-section .br-more a {
-  border-radius: 60px;
-  font-family: "Rubik", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  overflow: hidden;
-  line-height: 1;
-  padding: 12px 32px;
-  color: #fff;
-  background: #ff4c60;
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-}
-
-.blog-page-section .br-more a:hover {
-  color: #fff;
-  -webkit-animation-name: button-push;
-  animation-name: button-push;
-  -webkit-animation-duration: 0.3s;
-  animation-duration: 0.3s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-}
-
-.blog-page-section .widget {
-  margin-bottom: 30px;
-  padding: 20px;
-}
-
-.blog-page-section .screen-reader-text {
-  border: 0;
-  clip: rect(1px, 1px, 1px, 1px);
-  -webkit-clip-path: inset(50%);
-  clip-path: inset(50%);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute !important;
-  width: 1px;
-  word-wrap: normal !important;
-}
-
-.blog-page-section .widget .searchform input[type=text] {
-  border-radius: 30px;
-  border: 0;
-  background: #f3f3f3;
-  padding: 6px 20px;
-  max-width: 190px;
-}
-
-.blog-page-section .widget .searchform input[type=submit] {
-  color: #fff;
-  background: #ff4c60;
-  border-radius: 25px;
-  padding: 5px 20px;
-  border: 0;
-  cursor: pointer;
-}
-
-.blog-page-section .shadow-dark,
-.blog-page-section .form-control,
-.blog-page-section .desktop-header-3 .dropdown-menu,
-.desktop-header-3 .blog-page-section .dropdown-menu {
-  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
-  box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
-}
-
-.blog-page-section .widget-header {
-  margin-bottom: 15px;
-  margin-top: 0;
-}
-
-.blog-page-section .widget ul {
-  padding-left: 1.1rem;
-}
-
-.blog-page-section .blog-single {
-  background: #fff;
-  padding: 30px;
-  border-radius: 20px;
-}
-
-.blog-page-section .comment-respond {
-  margin-top: 2.5rem;
-  border-top: solid 1px #eee;
-  clear: both;
-}
-
-.blog-page-section .comment-respond .comment-notes {
-  font-style: italic;
-}
-
-.blog-page-section .comment-respond label {
-  display: block;
-  margin-bottom: 0.5rem;
-}
-
-.blog-page-section .comment-respond textarea,
-.blog-page-section .comment-respond input[type=text],
-.blog-page-section .comment-respond input[type=email],
-.blog-page-section .comment-respond input[type=url] {
-  border-radius: 30px;
-  border: 0;
-  background: #f3f3f3;
-  padding: 6px 20px;
-  outline: 0;
-  max-width: 100%;
-}
-
-.blog-page-section .comment-respond textarea {
-  height: 10rem;
-}
-
-.blog-page-section .comment-form-cookies-consent {
-  -webkit-box-align: baseline;
-  -ms-flex-align: baseline;
-  align-items: baseline;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.blog-page-section .comment-respond input[type=checkbox]+label {
-  font-size: 14px;
-  margin-left: 10px;
-}
-
-.blog-page-section .comment-respond input[type=submit] {
-  border-radius: 60px;
-  font-family: "Rubik", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  overflow: hidden;
-  line-height: 1;
-  padding: 12px 32px;
-  color: #fff;
-  background: #ff4c60;
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-  border: none;
-  cursor: pointer;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-}
-
-.blog-page-section .comment-respond input[type=submit]:focus {
-  outline: none;
-}
-
-.blog-page-section .comment-respond input[type=submit]:hover {
-  color: #fff;
-  -webkit-animation-name: button-push;
-  animation-name: button-push;
-  -webkit-animation-duration: 0.3s;
-  animation-duration: 0.3s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-}
-
-.blog-page-section .comment-area-section {
-  padding-bottom: 10px;
-}
-
-.blog-page-section .comment-area-section h3 {
-  margin: 0;
-  padding-bottom: 30px;
-}
-
-.blog-page-section .comment-area-section .comment-inner-box {
-  margin-bottom: 40px;
-}
-
-.blog-page-section .comment-area-section .comment-inner-box.reply-comment {
-  margin-left: 50px;
-}
-
-.blog-page-section .comment-area-section .comment-inner-box .comment-author-img {
-  width: 90px;
-  height: 90px;
-  overflow: hidden;
-  border-radius: 100%;
-  margin-right: 20px;
-}
-
-.blog-page-section .comment-area-section .comment-inner-box .comment-author-text {
-  overflow: hidden;
-}
-
-.blog-page-section .comment-area-section .comment-inner-box .comment-author-text h4 {
-  margin: 0;
-  padding-bottom: 5px;
-}
-
-.blog-page-section .comment-area-section .comment-inner-box .comment-author-text span {
-  font-size: 14px;
-  color: #6d6d6d;
-}
-
-.blog-page-section .comment-area-section .comment-inner-box .comment-author-text p {
-  margin-bottom: 0;
-  padding-bottom: 10px;
-}
-
-.blog-page-section .comment-area-section .comment-inner-box .comment-author-text .reply-btn a {
-  color: #fff;
-  border-radius: 20px;
-  padding: 0px 10px;
-  display: inline-block;
-  background-color: #ff4c60;
-}
-
-/*=================================================================*/
-/*                      CLIENTS                              
-/*=================================================================*/
-.client-item {
-  min-height: 50px;
-  position: relative;
-  text-align: center;
-  margin-top: 60px;
-}
-
-.client-item .inner {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  width: 100%;
-}
-
-.client-item img {
-  display: inline-block;
 }
 
 /*=================================================================*/
@@ -2541,7 +1781,8 @@ body.dark .blog-page-section .blog-single {
 }
 
 .social-icons li a {
-  font-size: 21px;
+  font-size: 36px;
+  color: white
 }
 
 .social-icons.light li a:hover {
