--- a/css/style.css
+++ b/css/style.css
@@ -974,7 +974,6 @@ header.mobile-header-2 .site-logo img {
 /*                      SECTIONS                             
 /*=================================================================*/
 main.content {
-  margin-left: 290px;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -988,7 +987,6 @@ main.content.open {
 }
 
 main.content-2 {
-  margin-left: 110px;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -1001,16 +999,9 @@ main.content-2.open {
   transform: translateX(110px);
 }
 
-section {
-  padding-top: 110px;
-  position: relative;
-}
-
 section.home {
   background: #353353;
-  padding: 0;
   height: 100vh;
-  min-height: 100vh;
 }
 
 section.contact {
@@ -1020,15 +1011,15 @@ section.contact {
 
 section.privacy {
   background: #494673;
+  padding-top: 10vh;
   padding-bottom: 10vh;
 }
 
 section.home .intro {
-  margin: auto;
-  max-width: 540px;
   text-align: center;
-  position: relative;
-  z-index: 1;
+  align-content: center;
+  width: 100%;
+  height: 100vh;
 }
 
 section.home .intro h1 {
@@ -2443,42 +2434,39 @@ only screen and (min-device-pixel-ratio: 1.5) {
 
 .icon-container {
   position: relative;
-  top: 0%;
-  left: 50%;
-  width: 100%;
-  padding-bottom: 50px;
-  z-index: -1;
 }
 
 .icon-slider {
+  position: relative;
   white-space: nowrap;
+  width: 100%;
 }
 
 .icon-button img {
-  width: 250px;
-  height: 250px;
-  margin-right: 50px;
-  border-radius: 40px;
+  width: 200px;
+  height: 200px;
+  margin-right: 33vh;
+  border-radius: 30px;
 }
 
 .icon-button {
   display: inline-block;
-  animation: slide-icons 10s infinite linear;
+  animation: slide-icons 15s infinite linear;
 }
 
 @keyframes slide-icons {
   0% {
     opacity: 0;
     /* Start with 0 opacity */
-    transform: translateX(100%);
+    transform: translateX(100vh);
   }
 
-  10% {
+  25% {
     opacity: 1;
     /* Gradually increase opacity */
   }
 
-  90% {
+  75% {
     opacity: 1;
     /* Maintain full opacity */
   }
@@ -2486,6 +2474,6 @@ only screen and (min-device-pixel-ratio: 1.5) {
   100% {
     opacity: 0;
     /* Fade out to 0 opacity */
-    transform: translateX(-100%);
+    transform: translateX(-100vh);
   }
 }
