--- a/css/style.css
+++ b/css/style.css
@@ -1005,8 +1005,11 @@ section.home {
 }
 
 section.contact {
-  padding-top: 5vh;
+  text-align: center;
+  align-content: center;
   background: #494673;
+  width: 100%;
+  height: 100vh;
 }
 
 section.privacy {
@@ -1022,44 +1025,25 @@ section.home .intro {
   height: 100vh;
 }
 
-section.home .intro h1 {
-  color: #353353;
-  font-size: 36px;
-}
-
-section.home .intro span {
-  color: #353353;
-  font-size: 16px;
-}
-
 section.home .social-icons li a {
   color: #FFF;
 }
 
-.section-title {
+.section-contact-title {
+  font-size: 32px;
+  text-align: left;
+  color: white;
+}
+
+.section-privacy-title {
   font-size: 36px;
-  margin: 0;
-  margin-left: 14px;
-  position: relative;
+  text-align: center;
   color: white;
 }
 
-.section-text {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
+.section-privacy-text {
+  font-size: 16px;
   color: white;
-  align-items: center;
-}
-
-.section-title:before {
-  content: "";
-  background-image: url(../fonts/dots-bg.svg);
-  display: block;
-  height: 37px;
-  left: -14px;
-  top: -14px;
-  position: absolute;
-  width: 37px;
 }
 
 /*=================================================================*/
