--- a/css/style.css
+++ b/css/style.css
@@ -919,7 +919,7 @@ header.mobile-header-2 .site-logo img {
 }
 
 .desktop-header-3 .nav-link.active {
-  color: #FFD15C !important;
+  color: #b49441 !important;
 }
 
 .desktop-header-3 .nav-link:hover {
@@ -1023,10 +1023,6 @@ section.home .intro {
   align-content: center;
   width: 100%;
   height: 100vh;
-}
-
-section.home .social-icons li a {
-  color: #FFF;
 }
 
 .section-contact-title {
@@ -1757,10 +1753,10 @@ body.dark .blog-page-section .blog-single {
 
 .social-icons li a {
   font-size: 36px;
-  color: white
+  color: #FFF
 }
 
-.social-icons.light li a:hover {
+.social-icons li a:hover {
   color: #FFD15C;
 }
 
