--- a/css/style.css
+++ b/css/style.css
@@ -2422,48 +2422,45 @@ only screen and (min-device-pixel-ratio: 1.5) {
   }
 }
 
-.icon-container {
-  position: relative;
-}
-
-.icon-slider {
-  position: relative;
-  white-space: nowrap;
+.carousel {
   width: 100%;
+  overflow: hidden;
+  position: relative;
 }
 
-.icon-button img {
+.carousel-track {
+  display: flex;
+  animation: slide 20s linear infinite;
+}
+
+.carousel:hover .carousel-track {
+  animation-play-state: paused;
+}
+
+.carousel img {
+  width: 10vw;
+  margin-right: 10vw;  
   border-radius: 20px;
+  flex-shrink: 0;
 }
 
-.icon-button {
-  width: 270px;
-  height: 480px;
-  margin-right: 10vh;
-  display: inline-block;
-  animation: slide-icons 15s infinite linear;
-}
-
-@keyframes slide-icons {
+/* Animation keyframes */
+@keyframes slide {
   0% {
     opacity: 0;
-    /* Start with 0 opacity */
-    transform: translateX(100vh);
+    transform: translateX(80%);
   }
 
-  25% {
-    opacity: 0.8;
-    /* Gradually increase opacity */
+  15% {
+    opacity: 0.9;
   }
 
-  75% {
-    opacity: 0.8;
-    /* Maintain full opacity */
+  85% {
+    opacity: 0.9;
   }
 
   100% {
     opacity: 0;
-    /* Fade out to 0 opacity */
-    transform: translateX(-100vh);
+    transform: translateX(-80%);
   }
 }
